web/app/assets/stylesheets/application.bootstrap.scss
@import 'bootstrap/scss/bootstrap';
@import 'bootstrap-icons/font/bootstrap-icons';


#home-index {
    overflow-wrap: break-word;
}

#message-form {
    border: 3px solid;
    
}

#message-box {
    border: 3px  solid;
    background-color: #aaa;
    margin-top: 10px;
}


#message-body {
    
    inline-size: min-content;
    word-wrap: break-word;
    overflow-wrap: break-word;

}

